--- a/TemaAzure2/Views/Home/Chat.cshtml
+++ b/TemaAzure2/Views/Home/Chat.cshtml
@@ -27,8 +27,7 @@
         </div>
     </div>
 </div>
-<!--Script references. -->
-<!--Reference the SignalR library. -->
+
  
 
 
@@ -51,6 +50,7 @@
                 }
             } while(!username)
 
+            document.getElementById('message');
             // Set initial focus to message input box.
             var messageInput = document.getElementById('message');
             messageInput.focus();
