--- a/TemaAzure2/Views/Shared/_LoginPartial.cshtml
+++ b/TemaAzure2/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,8 @@
 @if (User.Identity.IsAuthenticated)
 {
         <li class="nav-item">
-            <span class="navbar-text text-dark">Hello @User.Identity.Name!</span>
+            <span class="navbar-text text-dark ">Hello @User.Identity.Name!</span>
+            <span id="usermail" class="navbar-text text-dark">Hello @User.Identity.Name!</span>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="AzureAD" asp-controller="Account" asp-action="SignOut">Sign out</a>
